--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 <body>
   <!-- ===== NAVBAR ===== -->
   <header>
-    <nav class="navbar navbar-expand-lg bg-dark fixed-top custom-navbar">
+    <nav class="navbar navbar-expand-lg bg-dark fixed-top custom-navbar" role="navigation">
       <div class="container-fluid px-4">
         <!-- Logo + Brand -->
-        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="#home">
-          <img src="TipsyBean/assets/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img me-2" id="logo-img" />
+        <a class="navbar-brand d-flex align-items-center text-white fw-bold fs-3" href="#home" aria-label="Tipsy Bean Home">
+          <img src="TipsyBean/assets/logo.jpeg" alt="Tipsy Bean Coffee Shop Logo" class="logo-img me-2" id="logo-img" />
           Tipsy Bean
         </a>
 
@@ -45,25 +45,25 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
+          aria-label="Toggle navigation menu"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <!-- Nav Links -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav text-center">
-            <li class="nav-item">
-              <a class="nav-link text-white px-3" href="#home">Home</a>
+          <ul class="navbar-nav text-center" role="menubar">
+            <li class="nav-item" role="none">
+              <a class="nav-link text-white px-3" href="#home" role="menuitem">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-white px-3" href="#about-section">About</a>
+            <li class="nav-item" role="none">
+              <a class="nav-link text-white px-3" href="#about-section" role="menuitem">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-white px-3" href="#menu-section">Menu</a>
+            <li class="nav-item" role="none">
+              <a class="nav-link text-white px-3" href="#menu-section" role="menuitem">Menu</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-white px-3" href="#order-section">Order</a>
+            <li class="nav-item" role="none">
+              <a class="nav-link text-white px-3" href="#order-section" role="menuitem">Order</a>
             </li>
           </ul>
         </div>
@@ -76,27 +76,29 @@
 
     <!-- Hero Banner -->
     <section id="home" class="hero text-center">
-      <figure class="hero-image-wrapper">
-        <img src="TipsyBean/assets/CoffeeShop Interior.jpg" alt="Coffee Shop Interior" class="hero-image img-fluid" />
-        <figcaption class="hero-caption text-end pe-4">
-          <h1 class="hero-title">Welcome to <span class="latte-title">Tipsy Bean</span></h1>
-          <p class="hero-desc">Your cozy corner for the finest coffee and pastries.</p>
-        </figcaption>
-      </figure>
+      <div class="container-fluid p-0">
+        <figure class="hero-image-wrapper position-relative m-0">
+          <img src="TipsyBean/assets/CoffeeShop Interior.jpg" alt="Cozy coffee shop interior with warm lighting and comfortable seating" class="hero-image img-fluid w-100" />
+          <figcaption class="hero-caption position-absolute top-50 end-0 translate-middle-y text-end pe-4">
+            <h1 class="hero-title display-3 fw-bold">Welcome to <span class="latte-title">Tipsy Bean</span></h1>
+            <p class="hero-desc fs-5 fw-normal">Your cozy corner for the finest coffee and pastries.</p>
+          </figcaption>
+        </figure>
+      </div>
     </section>
 
     <!-- About Us -->
     <section id="about-section" class="about-section py-5">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center g-4">
           <!-- Image -->
-          <div class="col-md-5 text-center mb-4 mb-md-0">
-            <img src="TipsyBean/assets/logo.jpeg" alt="Tipsy Bean Logo" class="about-logo img-fluid rounded-4 shadow" />
+          <div class="col-lg-5 col-md-6 text-center mb-4 mb-md-0">
+            <img src="TipsyBean/assets/logo.jpeg" alt="Tipsy Bean coffee shop logo featuring a stylized coffee bean design" class="about-logo img-fluid rounded-circle shadow" />
           </div>
           <!-- Text -->
-          <div class="col-md-7 text-center text-md-start">
-            <h2 class="about-title">About Us</h2>
-            <p class="about-description">
+          <div class="col-lg-7 col-md-6 text-center text-md-start">
+            <h2 class="about-title display-5 fw-bold mb-3">About Us</h2>
+            <p class="about-description fs-6 lh-lg">
               In the heart of the city, Tipsy Bean began as a dream between friends
               who believed every cup of coffee could spark a new story. From the
               aroma of freshly ground beans to the laughter echoing off brick walls,
@@ -113,32 +115,44 @@
     <!-- Location -->
     <section id="find-us" class="location-section py-5 text-center">
       <div class="container">
-        <img src="TipsyBean/assets/pin.png" alt="Location Pin" class="location-pin mb-3" />
-        <h2 class="location-title">Find your way to us</h2>
-        <p class="location-description mb-3">
-          Looking for your next favorite coffee spot? Use the map below to find our location.
-        </p>
-        <a href="https://bit.ly/3I8A1pq" class="google-map-btn btn text-white px-4 py-2 rounded-pill" target="_blank" rel="noopener">
-          Google Maps
-        </a>
+        <div class="row justify-content-center">
+          <div class="col-lg-8 col-md-10">
+            <img src="TipsyBean/assets/pin.png" alt="Location marker pin icon" class="location-pin mb-3" />
+            <h2 class="location-title display-5 fw-bold mb-3">Find your way to us</h2>
+            <p class="location-description fs-6 mb-4">
+              Looking for your next favorite coffee spot? Use the map below to find our location.
+            </p>
+            <a href="https://bit.ly/3I8A1pq" 
+               class="btn btn-primary google-map-btn text-white px-4 py-2 rounded-pill text-decoration-none" 
+               target="_blank" 
+               rel="noopener noreferrer"
+               aria-label="Open Tipsy Bean location in Google Maps">
+              Google Maps
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- Menu -->
     <section id="menu-section" class="menu-section py-5 text-center">
       <div class="container">
-        <h2 class="menu-title mb-4">Menu</h2>
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <h2 class="menu-title display-4 fw-bold mb-5">Menu</h2>
+          </div>
+        </div>
         <div class="row justify-content-center g-4">
-          <div class="col-md-4 col-sm-6">
-            <div class="menu-card p-3 shadow-sm rounded-4">
-              <img src="TipsyBean/assets/Coffee.png" alt="Beverages" class="menu-img img-fluid rounded-3" />
-              <h3 class="menu-item-title mt-3">Beverages</h3>
+          <div class="col-xl-4 col-lg-5 col-md-6 col-sm-8">
+            <div class="menu-card p-4 h-100 d-flex flex-column justify-content-center align-items-center">
+              <img src="TipsyBean/assets/Coffee.png" alt="Coffee and beverages selection including espresso, latte, and specialty drinks" class="menu-img img-fluid rounded-3 mb-3" />
+              <h3 class="menu-item-title h4 fw-bold">Beverages</h3>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="menu-card p-3 shadow-sm rounded-4">
-              <img src="TipsyBean/assets/Pasta.png" alt="Food" class="menu-img img-fluid rounded-3" />
-              <h3 class="menu-item-title mt-3">Food</h3>
+          <div class="col-xl-4 col-lg-5 col-md-6 col-sm-8">
+            <div class="menu-card p-4 h-100 d-flex flex-column justify-content-center align-items-center">
+              <img src="TipsyBean/assets/Pasta.png" alt="Food selection including pasta, sandwiches, and fresh pastries" class="menu-img img-fluid rounded-3 mb-3" />
+              <h3 class="menu-item-title h4 fw-bold">Food</h3>
             </div>
           </div>
         </div>
@@ -148,25 +162,33 @@
     <!-- Order -->
     <section id="order-section" class="order-section py-5">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center g-4">
           <!-- Text -->
-          <div class="col-md-6 text-center text-md-start mb-4 mb-md-0">
-            <h2 class="order-title">Bringing Goodness to You</h2>
-            <p class="order-description">
+          <div class="col-lg-6 col-md-6 text-center text-md-start mb-4 mb-md-0">
+            <h2 class="order-title display-5 fw-bold mb-3">Bringing Goodness to You</h2>
+            <p class="order-description fs-6 mb-4">
               Order from our delivery partners and have it delivered right to your doorstep.
             </p>
-            <div class="order-buttons d-flex flex-wrap gap-3 justify-content-center justify-content-md-start">
-              <a href="https://www.foodpanda.ph/" class="order-btn foodpanda text-white rounded-pill px-4 py-2" target="_blank" rel="noopener">
+            <div class="order-buttons d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-md-start">
+              <a href="https://www.foodpanda.ph/" 
+                 class="btn btn-lg order-btn foodpanda text-white rounded-pill px-4 py-2 text-decoration-none" 
+                 target="_blank" 
+                 rel="noopener noreferrer"
+                 aria-label="Order Tipsy Bean coffee via Foodpanda delivery service">
                 Order via Foodpanda
               </a>
-              <a href="https://www.grab.com/ph/food/" class="order-btn grabfood text-white rounded-pill px-4 py-2" target="_blank" rel="noopener">
+              <a href="https://www.grab.com/ph/food/" 
+                 class="btn btn-lg order-btn grabfood text-white rounded-pill px-4 py-2 text-decoration-none" 
+                 target="_blank" 
+                 rel="noopener noreferrer"
+                 aria-label="Order Tipsy Bean coffee via GrabFood delivery service">
                 Order via GrabFood
               </a>
             </div>
           </div>
           <!-- Image -->
-          <div class="col-md-6 text-center">
-            <img src="TipsyBean/assets/DeliveryIcon.png" alt="Delivery Icon" class="delivery-img img-fluid" />
+          <div class="col-lg-6 col-md-6 text-center">
+            <img src="TipsyBean/assets/DeliveryIcon.png" alt="Food delivery service icon showing coffee and food being delivered to your door" class="delivery-img img-fluid" />
           </div>
         </div>
       </div>
@@ -174,18 +196,32 @@
   </main>
 
   <!-- ===== FOOTER ===== -->
-  <footer class="footer-section py-3">
-    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center text-center text-md-start">
-      <div class="footer-text text-white mb-2 mb-md-0">
-        &copy; 2025 Tipsy Bean. All rights reserved.
-      </div>
-      <div class="footer-social d-flex gap-3 justify-content-center">
-        <a href="https://www.facebook.com/TipsyBeanMamatid" target="_blank" rel="noopener" class="footer-icon-link">
-          <img src="TipsyBean/assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
-        </a>
-        <a href="https://www.instagram.com/tipsybeancabuyao/" target="_blank" rel="noopener" class="footer-icon-link">
-          <img src="TipsyBean/assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
-        </a>
+  <footer class="footer-section py-4" role="contentinfo">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+          <div class="footer-text text-white fs-6">
+            &copy; 2025 Tipsy Bean. All rights reserved.
+          </div>
+        </div>
+        <div class="col-md-6 text-center text-md-end">
+          <div class="footer-social d-flex gap-3 justify-content-center justify-content-md-end align-items-center">
+            <a href="https://www.facebook.com/TipsyBeanMamatid" 
+               target="_blank" 
+               rel="noopener noreferrer" 
+               class="footer-icon-link"
+               aria-label="Visit Tipsy Bean Facebook page">
+              <img src="TipsyBean/assets/FacebookIcon.png" alt="Facebook social media icon" class="footer-icon" />
+            </a>
+            <a href="https://www.instagram.com/tipsybeancabuyao/" 
+               target="_blank" 
+               rel="noopener noreferrer" 
+               class="footer-icon-link"
+               aria-label="Visit Tipsy Bean Instagram page">
+              <img src="TipsyBean/assets/InstagramIcon.png" alt="Instagram social media icon" class="footer-icon" />
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
