updated html css
mobile screen display fixed

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </button>
 
         <!-- Nav Links -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav text-center" role="menubar">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto text-center" role="menubar">
             <li class="nav-item" role="none">
               <a class="nav-link text-white px-3" href="#home" role="menuitem">Home</a>
             </li>
