--- a/index.html
+++ b/index.html
@@ -163,32 +163,36 @@
     <section id="order-section" class="order-section py-5">
       <div class="container">
         <div class="row align-items-center g-4">
-          <!-- Text -->
-          <div class="col-lg-6 col-md-6 text-center text-md-start mb-4 mb-md-0">
-            <h2 class="order-title display-5 fw-bold mb-3">Bringing Goodness to You</h2>
-            <p class="order-description fs-6 mb-4">
-              Order from our delivery partners and have it delivered right to your doorstep.
-            </p>
-            <div class="order-buttons d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-md-start">
-              <a href="https://www.foodpanda.ph/" 
-                 class="btn btn-lg order-btn foodpanda text-white rounded-pill px-4 py-2 text-decoration-none" 
-                 target="_blank" 
-                 rel="noopener noreferrer"
-                 aria-label="Order Tipsy Bean coffee via Foodpanda delivery service">
-                Order via Foodpanda
-              </a>
-              <a href="https://www.grab.com/ph/food/" 
-                 class="btn btn-lg order-btn grabfood text-white rounded-pill px-4 py-2 text-decoration-none" 
-                 target="_blank" 
-                 rel="noopener noreferrer"
-                 aria-label="Order Tipsy Bean coffee via GrabFood delivery service">
-                Order via GrabFood
-              </a>
+          <!-- Text and Images Combined -->
+          <div class="col-12 text-center text-md-start">
+            <div class="row align-items-center">
+              <!-- Text -->
+              <div class="col-lg-8 col-md-7 mb-4 mb-md-0">
+                <h2 class="order-title display-5 fw-bold mb-3">Bringing Goodness to You</h2>
+                <p class="order-description fs-6 mb-0">
+                  Order from our delivery partners and have it delivered right to your doorstep.
+                </p>
+              </div>
+              <!-- Delivery Partner Images -->
+              <div class="col-lg-4 col-md-5">
+                <div class="delivery-partners d-flex gap-3 justify-content-center justify-content-md-end align-items-center">
+                  <a href="https://www.foodpanda.ph/" 
+                     target="_blank" 
+                     rel="noopener noreferrer"
+                     aria-label="Order Tipsy Bean coffee via Foodpanda delivery service"
+                     class="delivery-partner-link">
+                    <img src="TipsyBean/assets/FoodPanda.png" alt="Order via FoodPanda delivery service" class="delivery-partner-img" />
+                  </a>
+                  <a href="https://www.grab.com/ph/food/" 
+                     target="_blank" 
+                     rel="noopener noreferrer"
+                     aria-label="Order Tipsy Bean coffee via GrabFood delivery service"
+                     class="delivery-partner-link">
+                    <img src="TipsyBean/assets/GrabFood.png" alt="Order via GrabFood delivery service" class="delivery-partner-img" />
+                  </a>
+                </div>
+              </div>
             </div>
-          </div>
-          <!-- Image -->
-          <div class="col-lg-6 col-md-6 text-center">
-            <img src="TipsyBean/assets/DeliveryIcon.png" alt="Food delivery service icon showing coffee and food being delivered to your door" class="delivery-img img-fluid" />
           </div>
         </div>
       </div>
