--- a/TipsyBean/pages/profile.html
+++ b/TipsyBean/pages/profile.html
@@ -22,10 +22,20 @@
   <!-- Profile Page Styles -->
   <link rel="stylesheet" href="../css/profile.css" />
 
+  <!-- Floating Cart Styles -->
+  <link rel="stylesheet" href="../css/floating-cart.css" />
+
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet"
+  />
+
+  <!-- Font Awesome Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    crossorigin="anonymous"
   />
 </head>
 
@@ -217,6 +227,9 @@
   <!-- Session Manager -->
   <script src="../script/session.js"></script>
 
+  <!-- Cart Manager -->
+  <script src="../script/cart.js"></script>
+
   <!-- Profile Script -->
   <script src="../script/profile.js"></script>
 
@@ -266,5 +279,13 @@
       }
     });
   </script>
+
+  <!-- Floating Cart Button -->
+  <div class="floating-cart-container">
+    <a href="./cart.html" class="floating-cart-btn" id="floatingCartBtn" title="View Shopping Cart">
+      <img src="../assets/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
+      <span class="floating-cart-badge" id="floatingCartBadge" style="display: none;"></span>
+    </a>
+  </div>
 </body>
 </html>
